--- a/fixed_list.html
+++ b/fixed_list.html
@@ -9,7 +9,7 @@
 
 	<div class = "content">
 		<a href = "https://www.mensjournal.com/health-fitness/best-workout-ever-according-science/2-dumbbell-shoulder-presses/" > The best workout Ever, According to science  </a>
-		<p> We asked exercise scientist Jeffrey M. Willardson, Ph.D., CSCS, associate professor of Kinesiology and Sports Studies at Eastern Illinois University to design a workout that incorporates these principles... </p>
+		<p> We asked exercise scientist Jeffrey M. Willardson, Ph.D., CSCS, associate professor of Kinesiology and Sports Studies at Eastern Illinois University to design a workout that incorporates these principles... test </p>
 	</div>
 
 	<div class = "content" >
