--- a/fixed_list.html
+++ b/fixed_list.html
@@ -1,11 +1,59 @@
-<< <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-	<link href="fixed_list.css" rel="stylesheet"	type= "text/css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="index.css" rel="stylesheet"	type= "text/css">
 </head>
-	<title> Fixed List</title>
+	<title>Fixed List</title>
 <body>
-	<h1> Fixed List </h1>
+	<h1>Fixed List</h1>
+
+	<div class="topnav" id="myTopnav">
+  <a href="index.html" class="active">Home</a>
+  <div class="dropdown">
+    <button class="dropbtn">Course 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="https://zybooks.com">Zybook</a>
+    </div>
+  </div> 
+<div class="dropdown">
+    <button class="dropbtn">Search 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="fixed_list.html">Fixed List</a>
+      <a href="#">From List</a>
+      <a href="#">Google API</a>
+      <a href="#">My/Our Search Engine</a>
+    </div>
+  </div> 
+  <div class="dropdown">
+    <button class="dropbtn">Browser 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="browser.html">Browser</a>
+      <a href="window.html">Window</a>
+      <a href="screen.html">Screen</a>
+      <a href="location.html">Location</a>
+      <a href="geolocation.html">Geolocation</a>
+    </div>
+  </div> 
+    <div class="dropdown">
+    <button class="dropbtn">About
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="bernice.html">Bernice Tran</a>
+      <a href="marcelo.html">Marcelo Villalba</a>
+      <a href="contact.html">Contact Us</a>
+    </div>
+  </div> 
+
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+</div>
 
 	<div class = "content">
 		<a href = "https://www.mensjournal.com/health-fitness/best-workout-ever-according-science/2-dumbbell-shoulder-presses/" > The best workout Ever, According to science  </a>
