--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <h1>This is the homepage for CS 355</h1>
 
 <div class="topnav" id="myTopnav">
-  <a href="#home" class="active">Home</a>
+  <a href="index.html" class="active">Home</a>
   <div class="dropdown">
     <button class="dropbtn">Course 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="https://zybooks.com">Zybook</a>
+      <a href="https://learn.zybooks.com/zybook/CUNYCSCI355TeitelmanSpring2019">Zybook</a>
     </div>
   </div> 
 <div class="dropdown">
@@ -37,14 +37,28 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
+      <a href="browser.html">Browser</a>
+      <a href="window.html">Window/Screen</a>
+      <a href="screen.html">Window/Screen</a>
+      <a href="location.html">Location</a>
+      <a href="geolocation.html">Geolocation</a>
     </div>
   </div> 
-  <a href="#about">About</a>
+  <div class="dropdown">
+    <button class="dropbtn">About
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="bernice.html">Bernice Tran</a>
+      <a href="marcelo.html">Marcelo Villalba</a>
+      <a href="contact.html">Contact Us</a>
+    </div>
+  </div> 
+
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 
-<script type="text/javascript" src="homepage.js"></script>
+<script type="text/javascript" src="index.js"></script>
 
 </body>
 </html>
