search box, marcelo.html
added search box with static search term

added marcelo.html

--- a/fixed_list.html
+++ b/fixed_list.html
@@ -5,9 +5,9 @@
 	<link href="index.css" rel="stylesheet"	type= "text/css">
 </head>
 	<title>Fixed List</title>
+
 <body>
 	<h1>Fixed List</h1>
-
 	<div class="topnav" id="myTopnav">
   <a href="index.html" class="active">Home</a>
   <div class="dropdown">
@@ -55,10 +55,21 @@
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 
+
+<div class="searchbox">
+  <input type="text" placeholder="Exercises..">
+</div>
+
+
+
 	<div class = "content">
 		<a href = "https://www.mensjournal.com/health-fitness/best-workout-ever-according-science/2-dumbbell-shoulder-presses/" > The best workout Ever, According to science  </a>
 		<p> We asked exercise scientist Jeffrey M. Willardson, Ph.D., CSCS, associate professor of Kinesiology and Sports Studies at Eastern Illinois University to design a workout that incorporates these principles... test </p>
 	</div>
+
+
+
+
 
 	<div class = "content" >
 		<a href ="https://www.self.com/story/10-insanely-effective-workouts-for-weight-loss">10 of the Best Workouts for Weight Loss </a>
