--- a/fixed_list.html
+++ b/fixed_list.html
@@ -56,10 +56,11 @@
 </div>
 
 
-<div class="searchbox">
+<form >
+  <label> Search:
   <input type="text" placeholder="Exercises..">
-</div>
-
+</label>
+</form>>
 
 
 	<div class = "content">
