--- a/index.html
+++ b/index.html
@@ -19,12 +19,6 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
         
         <!-- Course Dropdown  -->
         <li class="nav-item dropdown">
@@ -48,6 +42,21 @@
             <a class="dropdown-item" href="marcelo.html">Marcelo Villalba</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+
+
+
+        <!-- Search   -->
+      <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search</a>
+
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#"> Fixed Search</a>
+            <a class="dropdown-item" href="marcelo.html">From List</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Google API</a>
+            <a class="dropdown-item" href="#">Our Search Engine</a>
           </div>
         </li>
 
