--- a/fixed_list.html
+++ b/fixed_list.html
@@ -2,58 +2,78 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="index.css" rel="stylesheet"	type= "text/css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 	<title>Fixed List</title>
 
+<!-- navigation bar -->
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="index.html">CS355</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        
+        <!-- Course Dropdown  -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Course</a>
+
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="https://learn.zybooks.com/zybook/CUNYCSCI355TeitelmanSpring2019">Zybook</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+
+
+      <!-- About    -->
+      <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
+
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="bernice.html">Bernice Tran</a>
+            <a class="dropdown-item" href="marcelo.html">Marcelo Villalba</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+
+
+
+        <!-- Search   -->
+      <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search</a>
+
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#"> Fixed Search</a>
+            <a class="dropdown-item" href="marcelo.html">From List</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Google API</a>
+            <a class="dropdown-item" href="#">Our Search Engine</a>
+          </div>
+        </li>
+
+
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+
+
 <body>
 	<h1>Fixed List</h1>
-	<div class="topnav" id="myTopnav">
-  <a href="index.html" class="active">Home</a>
-  <div class="dropdown">
-    <button class="dropbtn">Course 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="https://zybooks.com">Zybook</a>
-    </div>
-  </div> 
-<div class="dropdown">
-    <button class="dropbtn">Search 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="fixed_list.html">Fixed List</a>
-      <a href="#">From List</a>
-      <a href="#">Google API</a>
-      <a href="#">My/Our Search Engine</a>
-    </div>
-  </div> 
-  <div class="dropdown">
-    <button class="dropbtn">Browser 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="browser.html">Browser</a>
-      <a href="window.html">Window</a>
-      <a href="screen.html">Screen</a>
-      <a href="location.html">Location</a>
-      <a href="geolocation.html">Geolocation</a>
-    </div>
-  </div> 
-    <div class="dropdown">
-    <button class="dropbtn">About
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="bernice.html">Bernice Tran</a>
-      <a href="marcelo.html">Marcelo Villalba</a>
-      <a href="contact.html">Contact Us</a>
-    </div>
-  </div> 
+	
 
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-</div>
 
 
 <form >
@@ -67,10 +87,6 @@
 		<a href = "https://www.mensjournal.com/health-fitness/best-workout-ever-according-science/2-dumbbell-shoulder-presses/" > The best workout Ever, According to science  </a>
 		<p> We asked exercise scientist Jeffrey M. Willardson, Ph.D., CSCS, associate professor of Kinesiology and Sports Studies at Eastern Illinois University to design a workout that incorporates these principles... test </p>
 	</div>
-
-
-
-
 
 	<div class = "content" >
 		<a href ="https://www.self.com/story/10-insanely-effective-workouts-for-weight-loss">10 of the Best Workouts for Weight Loss </a>
@@ -93,6 +109,10 @@
 	</div>
 
 
-
+<!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
