--- a/index.html
+++ b/index.html
@@ -52,24 +52,13 @@
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search</a>
 
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#"> Fixed Search</a>
-            <a class="dropdown-item" href="marcelo.html">From List</a>
+            <a class="dropdown-item" href="fixed_list.html"> Fixed Search</a>
+            <a class="dropdown-item" href="#">From List</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Google API</a>
             <a class="dropdown-item" href="#">Our Search Engine</a>
           </div>
         </li>
-
-
-
-
-
-
-
-
-
-
-
 
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
