last commit for friday night
made some connections and minor edits

--- a/fixed_list.html
+++ b/fixed_list.html
@@ -63,50 +63,39 @@
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control mr-sm-2" type="search" placeholder="Exercises" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
   </nav>
 
 
-<body>
-	<h1>Fixed List</h1>
-	
+
+<body>    
+   <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+       <a href = "https://www.mensjournal.com/health-fitness/best-workout-ever-according-science/2-dumbbell-shoulder-presses/" > The best workout Ever, According to science  </a>
+       <p> We asked exercise scientist Jeffrey M. Willardson, Ph.D., CSCS, associate professor of Kinesiology and Sports Studies at Eastern Illinois University to design a workout that incorporates these principles... test </p>
+      </div>
+    <div class = "container">
+      <a href ="https://www.self.com/story/10-insanely-effective-workouts-for-weight-loss">10 of the Best Workouts for Weight Loss </a>
+      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim... 
+      </p>
+
+    </div>
+
+    <div class ="container">
+      <a href="https://www.active.com/fitness/articles/the-7-best-exercises-for-a-full-body-workout"> The 7 best Exercises for a Full-Body Workout </a>
+     <p> Here are seven of the best exercises for athletes and fitness junkies looking for a simple and effective full-body workout.</p>
+    </div>
+  </div>
+  </body>
 
 
 
-<form >
-  <label> Search:
-  <input type="text" placeholder="Exercises..">
-</label>
-</form>>
 
 
-	<div class = "content">
-		<a href = "https://www.mensjournal.com/health-fitness/best-workout-ever-according-science/2-dumbbell-shoulder-presses/" > The best workout Ever, According to science  </a>
-		<p> We asked exercise scientist Jeffrey M. Willardson, Ph.D., CSCS, associate professor of Kinesiology and Sports Studies at Eastern Illinois University to design a workout that incorporates these principles... test </p>
-	</div>
-
-	<div class = "content" >
-		<a href ="https://www.self.com/story/10-insanely-effective-workouts-for-weight-loss">10 of the Best Workouts for Weight Loss </a>
-		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim...	
-		</p>
-	</div>
-	
-	<div class = "content" >
-		<a href ="https://www.active.com/fitness/articles/the-7-best-exercises-for-a-full-body-workout">									The 7 Best Exercises for a Full-Body Workout </a>
-		<p> Here are seven of the best exercises for athletes and fitness junkies looking for a simple and effective full-body workout.
-		</p>
-	</div>
-
-	<div class = "content" >
-		<a href ="https://www.self.com/story/10-insanely-effective-workouts-for-weight-loss">10 of the Best Workouts for Weight Loss </a>
-		<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim...	
-		</p>
-	</div>
 
 
 <!-- Optional JavaScript -->
